--- a/WEB DEVELOP EVENT 2/frontend/bookstyle.css
+++ b/WEB DEVELOP EVENT 2/frontend/bookstyle.css
@@ -11,7 +11,7 @@ body{
     justify-content:center;
     align-items:center;
     padding:10px;
-    background-image:url('admin.jpg') ;
+    background-image:url('ncas2.jpg') ;
     background-size:cover;
     background-position: relative;
     
